added android stuido 3.3 beta 1 and 3.4 canary 2 links

--- a/index.html
+++ b/index.html
@@ -394,6 +394,76 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.4 Canary 2 -->
+                            <tr>
+                                <td rowspan="5">3.4 Canary 2</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.1/android-studio-ide-182.5081642-windows.zip">android-studio-ide-182.5081642-windows.zip</a>
+                                </td>
+                                <td>1050259604 bytes</td>
+                                <td>e29a8112e1e4aa2384401c35acb5675d2078f698c5368a9d23d7bb93d2ee6b64</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNbRwly1fvxb2nrcgmj30pl0a10us.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.1/android-studio-ide-182.5081642-windows32.zip">android-studio-ide-182.5081642-windows32.zip</a>
+                                </td>
+                                <td>1049732401 bytes</td>
+                                <td>5070d957e0929c147589c8840a7ec257927e6b8b369a97bf13594bc8c3ebdebb</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.1/android-studio-ide-182.5081642-mac.zip">android-studio-ide-182.5081642-mac.dmg</a>
+                                </td>
+                                <td>1043041336 bytes</td>
+                                <td>e3bd6f7e17234e354663c1978057b9177ae588b5909eb683688b3a1cd353d34b</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.1/android-studio-ide-182.5081642-linux.zip">android-studio-ide-182.5081642-linux.zip</a>
+                                </td>
+                                <td>1057552339 bytes</td>
+                                <td>d30fff01d742ec82cc3bb2c93483a8ba8dca3df26e8d7c41c88bdb3797826632</td>
+                            </tr>
+                            <!-- 3.3 Beta 1 -->
+                            <tr>
+                                <td rowspan="5">3.3 Beta 1</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.13/android-studio-ide-182.5073496-windows.zip">android-studio-ide-182.5073496-windows.zip</a>
+                                </td>
+                                <td>1047472173 bytes</td>
+                                <td>0c98d1c1b3ce49712f9cf14ceb08f4444014bd190af59517cf2c0febab70addf</td>
+                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tNc79ly1fvtpf8c0psj30rg0a7ac6.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.13/android-studio-ide-182.5073496-windows32.zip">android-studio-ide-182.5073496-windows32.zip</a>
+                                </td>
+                                <td>1046944970 bytes</td>
+                                <td>8ed37c869c08d4a7d0073cdcc72078df100ed5cb1c7c9121d47f4aaa26fb6fea</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.13/android-studio-ide-182.5073496-mac.zip">android-studio-ide-182.5073496-mac.dmg</a>
+                                </td>
+                                <td>1039021974 bytes</td>
+                                <td>09b06a6a10fcddd595f9b517da42c4fe3909122b27b619c81e4a27b167954073</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.13/android-studio-ide-182.5073496-linux.zip">android-studio-ide-182.5073496-linux.zip</a>
+                                </td>
+                                <td>1053535913 bytes</td>
+                                <td>fda6f21eba49dc519bd4bdd32c76d5624c1594d697bc99e39eb79aa62b80e12d</td>
+                            </tr>
                             <!-- 3.2.1 正式版 -->
                             <tr>
                                 <td rowspan="5">3.2.1 正式版</td>
@@ -428,76 +498,6 @@
                                 </td>
                                 <td>1055510234 bytes</td>
                                 <td>b9ec0d44f2feaafe1e3fbd1ed696bf325f9e05cfb6c1ace84dbf87ae249efa84</td>
-                            </tr>
-                            <!-- 3.3 Canary 13 -->
-                            <tr>
-                                <td rowspan="5">3.3 Canary 13</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.12/android-studio-ide-182.5035453-windows.zip">android-studio-ide-182.5035453-windows.zip</a>
-                                </td>
-                                <td>1047368014 bytes</td>
-                                <td>1f12cc69b68165d5d9842e09d13510a58acdfb6740ecf2b283e5c42cf19319ee</td>
-                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNbRwly1fvxb2nrcgmj30pl0a10us.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.12/android-studio-ide-182.5035453-windows32.zip">android-studio-ide-182.5035453-windows32.zip</a>
-                                </td>
-                                <td>1046840811 bytes</td>
-                                <td>b7adda2333cad34c4c0c09c405e957c0b0376727ec7157bfd98395307ae09b97</td>
-                            </tr>
-                            <tr>
-                                <td>Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.12/android-studio-ide-182.5035453-mac.zip">android-studio-ide-182.5035453-mac.dmg</a>
-                                </td>
-                                <td>1038917803 bytes</td>
-                                <td>8507d8e3468baeabe34c519fc4906e288637adb5e71a0b1aa0cd7496dfef70d2</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.12/android-studio-ide-182.5035453-linux.zip">android-studio-ide-182.5035453-linux.zip</a>
-                                </td>
-                                <td>1053431765 bytes</td>
-                                <td>47f19d79abe971dd41af1776fd01ac855171b408f9f9b49b0920b2406aa74f38</td>
-                            </tr>
-                            <!-- 3.3 Canary 12 -->
-                            <tr>
-                                <td rowspan="5">3.3 Canary 12</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.11/android-studio-ide-182.5026711-windows.zip">android-studio-ide-182.5026711-windows.zip</a>
-                                </td>
-                                <td>1080108345 bytes</td>
-                                <td>c4da8415f9403b1423a2dac45e1463f125be71cd79471afc86f32f798e5607e2</td>
-                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tNc79ly1fvtpf8c0psj30rg0a7ac6.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.11/android-studio-ide-182.5026711-windows32.zip">android-studio-ide-182.5026711-windows32.zip</a>
-                                </td>
-                                <td>1079581142 bytes</td>
-                                <td>64e3cbaa158e09543590395164fe590e294903756d28e5cd283b00712abab18a</td>
-                            </tr>
-                            <tr>
-                                <td>Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.11/android-studio-ide-182.5026711-mac.zip">android-studio-ide-182.5026711-mac.dmg</a>
-                                </td>
-                                <td>1071658568 bytes</td>
-                                <td>b5645b0221ce67eb50e5645b75ee5bc3f50d786033ced1786aa2d7f005799499</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.11/android-studio-ide-182.5026711-linux.zip">android-studio-ide-182.5026711-linux.zip</a>
-                                </td>
-                                <td>1086172088 bytes</td>
-                                <td>938b6e62262b6da0e1a9e923c7393c60041ece5f90d38e233a34b637b8472e4c</td>
                             </tr>
                             <!-- 3.2.0 正式版 -->
                             <tr>
