--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fwn5gssu4hj30780bmaal.jpg" style="height: 209px; width: 130px;">
             </a>
         </div>
-        <div class="ad-float-right hide">
+        <div class="ad-float-right">
             <a href="http://gk.link/a/100XH" title="算法面试通关 40 讲-Sophon Tech 创始人、前 Facebook 工程师、卡内基梅隆大学计算机硕士带你吃透大厂面试题" onclick="trackOutboundLink('http://gk.link/a/100XH', 'AD-GeekTime-Algorithm-interview', 'click');" target="_blank">
                 <img src="https://ws1.sinaimg.cn/large/006tNbRwly1fweuxmnii6j30780bmacb.jpg" style="height: 209px; width: 130px;">
             </a>
