--- a/index.html
+++ b/index.html
@@ -195,7 +195,12 @@
             </a>
         </div>
         <div class="ad-float-right">
-            <a href="https://s.click.taobao.com/gP0xvKw" title="「" onclick="trackOutboundLink('https://s.click.taobao.com/gP0xvKw', 'AD-Tmall-1111-Red-Packet', 'click');" target="_blank">
+            <a href="http://t.cn/EZrQEPS" title="巅峰钜惠 拼你喜欢】阿里云双 11 组团云主机仅 99.5 元" onclick="trackOutboundLink('http://t.cn/EZrQEPS', 'AD-Aliyun-team-1111', 'click');" target="_blank">
+                <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fwsv2tscxwj30780bmmy1.jpg" style="height: 209px; width: 130px;">
+            </a>
+        </div>
+        <div class="ad-float-right hide">
+            <a href="https://s.click.taobao.com/gP0xvKw" title="" onclick="trackOutboundLink('https://s.click.taobao.com/gP0xvKw', 'AD-Tmall-1111-Red-Packet', 'click');" target="_blank">
                 <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fwn5gssu4hj30780bmaal.jpg" style="height: 209px; width: 130px;">
             </a>
         </div>
