add jd book ad info

--- a/index.html
+++ b/index.html
@@ -199,12 +199,17 @@
                 <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fwsv2tscxwj30780bmmy1.jpg" style="height: 209px; width: 130px;">
             </a>
         </div>
+        <div class="ad-float-right">
+            <a href="https://u.jd.com/41FO0r" title="京东图书文娱狂欢盛典 自营图书每满 200 减 100" onclick="trackOutboundLink('https://u.jd.com/41FO0r', 'AD-JD-Books-200-100', 'click');" target="_blank">
+                <img src="https://ws3.sinaimg.cn/large/006tNbRwly1fx5c24d915j30780bmwfk.jpg" style="height: 209px; width: 130px;">
+            </a>
+        </div>
         <div class="ad-float-right hide">
             <a href="https://s.click.taobao.com/gP0xvKw" title="" onclick="trackOutboundLink('https://s.click.taobao.com/gP0xvKw', 'AD-Tmall-1111-Red-Packet', 'click');" target="_blank">
                 <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fwn5gssu4hj30780bmaal.jpg" style="height: 209px; width: 130px;">
             </a>
         </div>
-        <div class="ad-float-right">
+        <div class="ad-float-right hide">
             <a href="http://gk.link/a/100XH" title="算法面试通关 40 讲-Sophon Tech 创始人、前 Facebook 工程师、卡内基梅隆大学计算机硕士带你吃透大厂面试题" onclick="trackOutboundLink('http://gk.link/a/100XH', 'AD-GeekTime-Algorithm-interview', 'click');" target="_blank">
                 <img src="https://ws1.sinaimg.cn/large/006tNbRwly1fweuxmnii6j30780bmacb.jpg" style="height: 209px; width: 130px;">
             </a>
@@ -356,6 +361,13 @@
     <section id="body">
         <div class="container body-container">
             <div class="row">
+                <div>
+                    <blockquote style="color: gray">
+                        <p>京东图书文娱狂欢盛典 自营图书<strong style="color: red">每满 200 减 100</strong>
+                            <a href="https://u.jd.com/41FO0r">https://u.jd.com/41FO0r</a> 京东红包
+                            <a href="https://u.jd.com/37hi7Q">https://u.jd.com/37hi7Q</a>，可以先领红包再买书!!!</p>
+                    </blockquote>
+                </div>
                 <div>
                     <h1 id="introduction" class="content-title" align="center">AndroidDevTools</h1>
                     <p>收集整理Android开发所需的Android SDK、开发中用到的工具、Android开发教程、Android设计规范，免费的设计素材等。</p>
