add android studio 3.3 beta 2/beta 3 and 3.4 cancary 3 links

--- a/index.html
+++ b/index.html
@@ -362,10 +362,13 @@
         <div class="container body-container">
             <div class="row">
                 <div>
+                    <h1 class="content-title" align="center">福利</h1>
                     <blockquote style="color: gray">
                         <p>京东图书文娱狂欢盛典 自营图书<strong style="color: red">每满 200 减 100</strong>
-                            <a href="https://u.jd.com/41FO0r">https://u.jd.com/41FO0r</a> 京东红包
-                            <a href="https://u.jd.com/37hi7Q">https://u.jd.com/37hi7Q</a>，可以先领红包再买书!!!</p>
+                            <a href="https://u.jd.com/41FO0r">戳我去买书</a> 京东红包
+                            <a href="https://u.jd.com/37hi7Q">戳我领京东红包</a>，可以先领红包再买书!!!</p>
+                        <br/>
+                        <p>全年最低！😱😱 京东 plus 一年+爱奇艺黄金会员 1 年 = <strong style="color: red">132 元</strong> 开通链接：<a href="https://u.jd.com/NI7cCT">请大力的戳我</a>!!!</p>
                     </blockquote>
                 </div>
                 <div>
@@ -416,6 +419,111 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.3 Beta 3 -->
+                            <tr>
+                                <td rowspan="5">3.3 Beta 3</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.15/android-studio-ide-182.5105271-windows.zip">android-studio-ide-182.5105271-windows.zip</a>
+                                </td>
+                                <td>1047550748 bytes</td>
+                                <td>500517f4c701188580188fdd9ca099545c61dabdecf7cd2ee654fb6b88c43585</td>
+                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tNbRwly1fx5dr5zb2hj31hs0ssq9u.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.15/android-studio-ide-182.5105271-windows32.zip">android-studio-ide-182.5105271-windows32.zip</a>
+                                </td>
+                                <td>1047023545 bytes</td>
+                                <td>4bd0c7f2f47d04d7954577452f0cfb8dd5c501f295d31845e84892f791c054bb</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.15/android-studio-ide-182.5105271-mac.zip">android-studio-ide-182.5105271-mac.dmg</a>
+                                </td>
+                                <td>1039100823 bytes</td>
+                                <td>5124df44f9b59ecea62f4872dd394926fe3253191d5a823844011d32c2560b9d</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.15/android-studio-ide-182.5105271-linux.zip">android-studio-ide-182.510527-linux.zip</a>
+                                </td>
+                                <td>1053614514 bytes</td>
+                                <td>b86d08f730e251eee646fd49e82db74e3e8ddd07a5ad33707192bcb0d378430e</td>
+                            </tr>
+                            <!-- 3.4 Canary 3 -->
+                            <tr>
+                                <td rowspan="5">3.4 Canary 3</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.2/android-studio-ide-183.5112304-windows.zip">android-studio-ide-183.5112304-windows.zip</a>
+                                </td>
+                                <td>1056910710 bytes</td>
+                                <td>ebbce36a1d6a64d48f6ef054273bb0614a00c8fe9a05e7d29cf23afbbb4a4f8c</td>
+                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tNbRwly1fx5dg1yu6vj31h80lsn2y.jpgg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.2/android-studio-ide-183.5112304-windows32.zip">android-studio-ide-183.5112304-windows32.zip</a>
+                                </td>
+                                <td>1056383507 bytes</td>
+                                <td>883552fab60c5710e07866a4a365b5bf6596a9598551d0f376c020bd0290539e</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.2/android-studio-ide-183.5112304-mac.zip">android-studio-ide-183.5112304-mac.dmg</a>
+                                </td>
+                                <td>1049691963 bytes</td>
+                                <td>034edd4e8a55e0eca25a429f09bc18919187fd0589b8fadd82a751a598281073</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.2/android-studio-ide-183.5112304-linux.zip">android-studio-ide-183.5112304-linux.zip</a>
+                                </td>
+                                <td>1064215063 bytes</td>
+                                <td>17b6cb6906e10895965c55332c4ae70744ef343432242c28c22ec7169e22f337</td>
+                            </tr>
+                            <!-- 3.3 Beta 2 -->
+                            <tr>
+                                <td rowspan="5">3.3 Beta 2</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.14/android-studio-ide-182.5078385-windows.zip">android-studio-ide-182.5078385-windows.zip</a>
+                                </td>
+                                <td>1047507718 bytes</td>
+                                <td>ce5606dab4fb8d7bf018a38fbb97ed1f67cf1d29aa16cf568a2f8aee1bb1b502</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tNbRwly1fx5cvhxwncj31hy0lg79r.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.14/android-studio-ide-182.5078385-windows32.zip">android-studio-ide-182.5078385-windows32.zip</a>
+                                </td>
+                                <td>1046980515 bytes</td>
+                                <td>257a3b1c6d9f125d5f1235457826d3b8499ce2eff26c239f6c8c766b5cd810d5</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.14/android-studio-ide-182.5078385-mac.zip">android-studio-ide-182.5078385-mac.dmg</a>
+                                </td>
+                                <td>1039057767 bytes</td>
+                                <td>c21d306bee469c0fd1cf9d3d87e35372ad4f5503340d5bef8411de10605baa72</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.14/android-studio-ide-182.5078385-linux.zip">android-studio-ide-182.5078385-linux.zip</a>
+                                </td>
+                                <td>1053571485 bytes</td>
+                                <td>16ee55dca426fd0aaee802561ed25656446aad9ea8001aa8b373f5ef10285c82</td>
+                            </tr>
                             <!-- 3.4 Canary 2 -->
                             <tr>
                                 <td rowspan="5">3.4 Canary 2</td>
