remove jd ad info

--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
                 <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fwsv2tscxwj30780bmmy1.jpg" style="height: 209px; width: 130px;">
             </a>
         </div>
-        <div class="ad-float-right">
-            <a href="https://u.jd.com/41FO0r" title="京东图书文娱狂欢盛典 自营图书每满 200 减 100" onclick="trackOutboundLink('https://u.jd.com/41FO0r', 'AD-JD-Books-200-100', 'click');" target="_blank">
+        <div class="ad-float-right hide">
+            <a href="https://u.jd.com/41FO0r" title="昼短夜长 正好读书每满 100 减 40" onclick="trackOutboundLink('https://u.jd.com/41FO0r', 'AD-JD-Books-200-100', 'click');" target="_blank">
                 <img src="https://ws3.sinaimg.cn/large/006tNbRwly1fx5c24d915j30780bmwfk.jpg" style="height: 209px; width: 130px;">
             </a>
         </div>
@@ -361,16 +361,6 @@
     <section id="body">
         <div class="container body-container">
             <div class="row">
-                <div>
-                    <h1 class="content-title" align="center">福利</h1>
-                    <blockquote style="color: gray">
-                        <p>京东图书文娱狂欢盛典 自营图书<strong style="color: red">每满 200 减 100</strong>
-                            <a href="https://u.jd.com/41FO0r">戳我去买书</a> 京东红包
-                            <a href="https://u.jd.com/37hi7Q">戳我领京东红包</a>，可以先领红包再买书!!!</p>
-                        <br/>
-                        <p>全年最低！😱😱 京东 plus 一年+爱奇艺黄金会员 1 年 = <strong style="color: red">132 元</strong> 开通链接：<a href="https://u.jd.com/NI7cCT">请大力的戳我</a>!!!</p>
-                    </blockquote>
-                </div>
                 <div>
                     <h1 id="introduction" class="content-title" align="center">AndroidDevTools</h1>
                     <p>收集整理Android开发所需的Android SDK、开发中用到的工具、Android开发教程、Android设计规范，免费的设计素材等。</p>
