--- a/index.html
+++ b/index.html
@@ -195,6 +195,12 @@
             </a>
         </div>
         <div class="ad-float-right">
+            <a href="https://promotion.aliyun.com/ntms/act/qwbk.html?userCode=j7dufdfe" title="全民云计算 爆款云服务器低至 2 折，1 核 1G ¥ 293元/年" onclick="trackOutboundLink('https://promotion.aliyun.com/ntms/act/qwbk.html?userCode=j7dufdfe', 'AD-Aliyun-cloud-host-2', 'click');"
+                target="_blank">
+                <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fxb2m2t9jqj308w0bvt93.jpg" style="height: 209px; width: 130px;">
+            </a>
+        </div>
+        <div class="ad-float-right hide">
             <a href="http://t.cn/EZrQEPS" title="巅峰钜惠 拼你喜欢】阿里云双 11 组团云主机仅 99.5 元" onclick="trackOutboundLink('http://t.cn/EZrQEPS', 'AD-Aliyun-team-1111', 'click');" target="_blank">
                 <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fwsv2tscxwj30780bmmy1.jpg" style="height: 209px; width: 130px;">
             </a>
@@ -362,6 +368,11 @@
         <div class="container body-container">
             <div class="row">
                 <div>
+                    <p>
+                        <a href="http://t.cn/E25gpMj" title="亚马逊冬之读宴精选好书满 200 元减 50元" onclick="trackOutboundLink('http://t.cn/E25gpMj', 'AD-AMZ-Books-200-50', 'click');" target="_blank">
+                            <img src="https://ws2.sinaimg.cn/large/006tNbRwly1fxb57sm7y0j315o08cmyt.jpg">
+                        </a>
+                    </p>
                     <h1 id="introduction" class="content-title" align="center">AndroidDevTools</h1>
                     <p>收集整理Android开发所需的Android SDK、开发中用到的工具、Android开发教程、Android设计规范，免费的设计素材等。</p>
                     <p>欢迎大家推荐自己在Android开发过程中用的好用的工具、学习开发教程、用到设计素材。如果你觉得本站对你有用，你可以点击底部的分享按钮，把本站分享到社交网络让你的小伙伴和更多的人知道。</p>
