add android studio 3.3 beta4 and 3.4 canary4 links

--- a/index.html
+++ b/index.html
@@ -420,6 +420,76 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.4 Canary 4 -->
+                            <tr>
+                                <td rowspan="5">3.4 Canary 4</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.3/android-studio-ide-183.5129585-windows.zip">android-studio-ide-183.5129585-windows.zip</a>
+                                </td>
+                                <td>1071744043 bytes</td>
+                                <td>07cd59a52756cf4308b65fa3f869a58ac138f015e8715f8b9cfc67e70e6bb63e</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNbRwly1fxb5l29hjkj31je0ji79o.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.3/android-studio-ide-183.5129585-windows32.zip">android-studio-ide-183.5129585-windows32.zip</a>
+                                </td>
+                                <td>1071216840 bytes</td>
+                                <td>40339bceadd597bb6f390325bce106d58e0d9a089502e98e8a3edfdde6ba6700</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.3/android-studio-ide-183.5129585-mac.zip">android-studio-ide-183.5129585-mac.dmg</a>
+                                </td>
+                                <td>1066568371 bytes</td>
+                                <td>efb69d213d3b0f512dccfd1191175484bc89325bcfa3062acce63e090db60029</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.3/android-studio-ide-183.5129585-linux.zip">android-studio-ide-183.5129585-linux.zip</a>
+                                </td>
+                                <td>1080509439 bytes</td>
+                                <td>239d82541f439a23b15a8b520ce6862723bee53c1dddcb5b1ad71308bc4ec083</td>
+                            </tr>
+                            <!-- 3.3 Beta 4 -->
+                            <tr>
+                                <td rowspan="5">3.3 Beta 4</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.1/android-studio-ide-182.5114240-windows.zip">android-studio-ide-182.5114240-windows.zip</a>
+                                </td>
+                                <td>1047568906 bytes</td>
+                                <td>f2101fe3fbfca66eba320de893b7f7d5e9ddcc80de34fb490411468cee921ede</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tNbRwly1fxb5g52xvzj31i20k0dl4.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.1/android-studio-ide-182.5114240-windows32.zip">android-studio-ide-182.5114240-windows32.zip</a>
+                                </td>
+                                <td>1047041703 bytes</td>
+                                <td>ac4aca2b3e255200ae84c12cfbc876a8f1a76bf6c19a3fea71327bdac6fce7af</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.1/android-studio-ide-182.5114240-mac.zip">android-studio-ide-182.5114240-mac.dmg</a>
+                                </td>
+                                <td>1039118950 bytes</td>
+                                <td>de183d88fe0df9685a51866a8c2d73fbf0dcc855c7b56db4e045f02c055d8c17</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.1/android-studio-ide-182.5114240-linux.zip">android-studio-ide-182.5114240-linux.zip</a>
+                                </td>
+                                <td>1053632670 bytes</td>
+                                <td>02369c3ae059091d7593546d072a70307be13b7f6db276b9a78507b6a9e5ff89</td>
+                            </tr>
                             <!-- 3.3 Beta 3 -->
                             <tr>
                                 <td rowspan="5">3.3 Beta 3</td>
@@ -450,7 +520,7 @@
                             <tr>
                                 <td>Linux</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.15/android-studio-ide-182.5105271-linux.zip">android-studio-ide-182.510527-linux.zip</a>
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.15/android-studio-ide-182.5105271-linux.zip">android-studio-ide-182.5105271-linux.zip</a>
                                 </td>
                                 <td>1053614514 bytes</td>
                                 <td>b86d08f730e251eee646fd49e82db74e3e8ddd07a5ad33707192bcb0d378430e</td>
@@ -466,7 +536,7 @@
                                 </td>
                                 <td>1056910710 bytes</td>
                                 <td>ebbce36a1d6a64d48f6ef054273bb0614a00c8fe9a05e7d29cf23afbbb4a4f8c</td>
-                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tNbRwly1fx5dg1yu6vj31h80lsn2y.jpgg">查看</a></td>
+                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tNbRwly1fx5dg1yu6vj31h80lsn2y.jpg">查看</a></td>
                             </tr>
                             <tr>
                                 <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.2/android-studio-ide-183.5112304-windows32.zip">android-studio-ide-183.5112304-windows32.zip</a>
