add android stuido 3.4 canary 5 and 3.3 rc1 links

--- a/index.html
+++ b/index.html
@@ -426,6 +426,76 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.3 RC 1 -->
+                            <tr>
+                                <td rowspan="5">3.3 RC 1</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.17/android-studio-ide-182.5138683-windows.zip">android-studio-ide-182.5138683-windows.zip</a>
+                                </td>
+                                <td>1056592209 bytes</td>
+                                <td>74c456000afdf97632a9a0b6dc2f2d0a585f200fa0e42a059f7400e02b61d54e</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNbRwly1fxmpcvlsobj31gy0l2afh.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.17/android-studio-ide-182.5138683-windows32.zip">android-studio-ide-182.5138683-windows32.zip</a>
+                                </td>
+                                <td>1056065006 bytes</td>
+                                <td>9cc1cb44016cca554e674fded5cc27a0ae59673610c8c4d3b316a19049d3a662</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.17/android-studio-ide-182.5138683-mac.zip">android-studio-ide-182.5138683-mac.dmg</a>
+                                </td>
+                                <td>1047843701 bytes</td>
+                                <td>766b55f79757525cde2b616988aa6d1606fd51af0fef681f349c93054ba02dcb</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.17/android-studio-ide-182.5138683-linux.zip">android-studio-ide-182.5138683-linux.zip</a>
+                                </td>
+                                <td>1062656446 bytes</td>
+                                <td>670936864a2a3337879c287bda7a36823f513b260d14f9dce6933f428d29ec2a</td>
+                            </tr>
+                            <!-- 3.4 Canary 5 -->
+                            <tr>
+                                <td rowspan="5">3.4 Canary 5</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.4/android-studio-ide-183.5141831-windows.zip">android-studio-ide-183.5141831-windows.zip</a>
+                                </td>
+                                <td>1079561095 bytes</td>
+                                <td>b977b484639cb103016d4e86dd9d6206266290ca0d2aab8904edf52cca512633</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNbRwly1fxmp8p4cilj31fi0ksjx0.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.4/android-studio-ide-183.5141831-windows32.zip">android-studio-ide-183.5141831-windows32.zip</a>
+                                </td>
+                                <td>1079033892 bytes</td>
+                                <td>ce335e0e3105deb741cdcbaa7d869d1af735d65cb44d152c99d89107af44b11b</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.4/android-studio-ide-183.5141831-mac.zip">android-studio-ide-183.5141831-mac.dmg</a>
+                                </td>
+                                <td>1074391548 bytes</td>
+                                <td>a277ab848578d0121c73ad0d5c100dbfc802b4a80c5d40e67ed1fe23a94720b1</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.4.0.4/android-studio-ide-183.5141831-linux.zip">android-studio-ide-183.5141831-linux.zip</a>
+                                </td>
+                                <td>1088326498 bytes</td>
+                                <td>512ae0d4868bd9e0d697b0e5ffb0f806119246597b902b0959ed8e29fd2ed375</td>
+                            </tr>
                             <!-- 3.4 Canary 4 -->
                             <tr>
                                 <td rowspan="5">3.4 Canary 4</td>
